Added in some HTML to git

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>repl.it</title>
+    <title>Git Example</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+      <h1>Trying out some changes with git</h1>
+      <p>This is a random block of text</p>
+      <img src="https://images-na.ssl-images-amazon.com/images/I/61iwElTo6ML.jpg">
     <script src="script.js"></script>
   </body>
-</html>
