--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
       <h1>Trying out some changes with git</h1>
       <p>This is a random block of text</p>
+      <a href="https://google.com">Google</a>
       <img src="https://images-na.ssl-images-amazon.com/images/I/61iwElTo6ML.jpg">
     <script src="script.js"></script>
   </body>
